HHH-5248 - Introduce CompositeType interface (to replace AbstractComponentType interface)
git-svn-id: https://svn.jboss.org/repos/hibernate/core/trunk@19572 1b8cb986-b30d-0410-93ca-fae66ebed9b2